# Physical-AI-Humanoid-Robotics-With-RAG

./: LAUNCH_CHECKLIST.md  QWEN.md  README.md  health_check.py  railway.toml  render.yaml
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  start.sh
backend/src/: config.py
backend/src/api/: main.py
backend/src/api/routes/: chapters.py  chat.py  personalization.py  profile.py
backend/src/middleware/: rate_limit.py
backend/src/models/: chapter.py  chat.py  session.py  user.py
backend/src/scripts/: index_content.py
backend/src/services/: database.py  embedding_service.py  rag_service.py
backend/src/utils/: logging.py
docusaurus/: docusaurus.config.ts  docusaurus.config.vc.ts  package-lock.json  package.json  sidebars.ts
docusaurus/build-vercel/: 404.html  index.html  sitemap.xml
docusaurus/build-vercel/markdown-page/: index.html
docusaurus/build-vercel/ur/: 404.html  index.html  sitemap.xml
docusaurus/docs/chapter-1-introduction-to-physical-ai/: index.md
docusaurus/docs/chapter-2-basics-of-humanoid-robotics/: index.md
docusaurus/docs/chapter-3-ros-2-fundamentals/: index.md
docusaurus/docs/chapter-4-digital-twin-simulation/: index.md
docusaurus/docs/chapter-5-vision-language-action-systems/: index.md
docusaurus/docs/chapter-6-capstone/: index.md
docusaurus/src/pages/: index.module.css
specs/textbook-generation/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/textbook-generation/checklists/: requirements.md
(+82 files in other folders)
